fixed responsive nav, added the progressbar, wrapped aroudn the message div

--- a/codingExcercise/css/codingExcercise.css
+++ b/codingExcercise/css/codingExcercise.css
@@ -1,56 +1,121 @@
 html {
     font-size: 14px;
-  }
+    
+}
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+/* nav*/
 
-  .mainNav{
+.mainNav {
     width: 100%;
     height: 115px;
     background: url(../images/wave-pattern.png), -webkit-linear-gradient(-497deg, #9141A6 0%, #0E0BAB 100%);
     background: url(../images/wave-pattern.png), linear-gradient(227deg, #9141A6 0%, #0E0BAB 100%);
     background-repeat: repeat;
-    background-blend-mode: color-burn; 
-  }
-  .navLogo{
+    background-blend-mode: color-burn;
+}
+
+.navLogo {
     width: 100px;
-  }
-  .priceIcon{
+}
+
+.navExpansed {
+    width: 100%;
+    padding: 1rem 1rem 2rem 1rem;
+    position: fixed;
+    top: 115px;
+    left: 0;
+    background-color: #2DBBF2;
+    transition: all .2s linear;
+}
+
+.mainNav ul li a:hover{ 
+  text-decoration: underline;
+}
+.mainNav ul li a .active{
+    color: #999 !important;
+}
+
+/*message*/
+.progressBarContainer{
+    position: relative;
+}
+.rounded-circle{
+    position: absolute;
+    top: -1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+.progress-bar{
+    width: 100%;
+    height: .5rem;
+    border-radius: 5px;
+    background-color: #2DBBF2;
+    transition: width 0.6s ease;
+}
+/*cards*/
+
+.card-deck .card {
+    min-width: 220px;
+}
+
+.border-top {
+    border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.priceIcon {
     width: 1.5rem;
     height: auto;
-  }
+}
 
-  .priceTitle{
+.priceTitle {
     font-size: 2rem;
-  }
- 
-  .pricing-card-title{
+}
+
+.pricing-card-title {
     font-size: 4.875em;
     color: #38DA7E;
     background-color: #D1F6E1;
     padding-top: 2rem;
-  }
-  .priceCardTitleNumber{
+}
+
+.priceCardTitleNumber {
     vertical-align: top;
     line-height: 3rem;
-  }
-  .pricingCardTitleSmall{
+}
+
+.pricingCardTitleSmall {
     font-size: 1.125rem;
     vertical-align: super;
     vertical-align: top;
-  }
+}
 
-  .checkIcon{
+/*table*/
+
+.checkIcon {
     width: 25px;
     height: auto;
-  }
+}
 
-.footerContainer{
+/*footer*/
+
+.footerContainer {
     background: url(../images/wave-pattern.png), -webkit-linear-gradient(-497deg, #9141A6 0%, #0E0BAB 100%);
     background: url(../images/wave-pattern.png), linear-gradient(227deg, #9141A6 0%, #0E0BAB 100%);
     background-repeat: repeat;
-    background-blend-mode: color-burn; 
+    background-blend-mode: color-burn;
 }
 
-.footerLogo{
+.footerLogo {
     width: 5rem;
     height: auto;
 }
@@ -61,25 +126,25 @@ html {
 }
 */
 
-  @media (min-width: 768px) {
+/* meedia query 768px */
+
+@media (min-width: 768px) {
     html {
-      font-size: 16px;
+        font-size: 16px;
     }
-  }
-  
-  .container {
-    max-width: 960px;
-  }
-  
-  .pricing-header {
-    max-width: 700px;
-  }
-  
-  .card-deck .card {
-    min-width: 220px;
-  }
-  
-  .border-top { border-top: 1px solid #e5e5e5; }
-  .border-bottom { border-bottom: 1px solid #e5e5e5; }
-  
-  .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+
+    .navExpansed {
+        position: static;
+        top: 0;
+        background-color: transparent;
+    }
+
+    .navLiPipeDivider::after {
+        content: " | ";
+        padding-left: .5rem;
+    }
+
+}
+
+/*  end media query */
